# vulkan-setup

./: .gitignore  CMakeLists.txt  pooling.cpp  setup.sh
include/: VkEngine.h  VkInitializers.h  VkMemoryObjects.h  VkMesh.h  VkPipelineBuilder.h
shaders/: pooling.comp  pooling.comp.spv  triangle.vert  triangle_mesh.vert
src/: VkEngine.cpp  VkInitializers.cpp  VkMesh.cpp  VkPipelineBuilder.cpp  main.cpp
